sintax/calc-sintaxis.output
Terminals unused in grammar

    TOKEN_EQUALS


Grammar

    0 $accept: prog $end

    1 prog: return_type TOKEN_ID TOKEN_PAREN_L TOKEN_PAREN_R TOKEN_LLAVE_L body TOKEN_LLAVE_R

    2 return_type: TOKEN_VOID
    3            | type

    4 body: sentencias

    5 sentencias: ε
    6           | sentencia sentencias

    7 sentencia: decl
    8          | asign
    9          | ret

   10 decl: var
   11     | cts

   12 var: type TOKEN_ID TOKEN_PUNTO_Y_COMA
   13    | type TOKEN_ID TOKEN_ASSIGN value TOKEN_PUNTO_Y_COMA

   14 cts: TOKEN_CONST type asign

   15 type: TOKEN_INT
   16     | TOKEN_BOOL

   17 asign: TOKEN_ID TOKEN_ASSIGN value TOKEN_PUNTO_Y_COMA

   18 ret: TOKEN_RETURN value TOKEN_PUNTO_Y_COMA

   19 value: expr

   20 expr: TOKEN_NUM
   21     | TOKEN_ID
   22     | TOKEN_VAL_BOOL
   23     | expr TOKEN_MAS expr
   24     | expr TOKEN_MENOS expr
   25     | expr TOKEN_DIV expr
   26     | expr TOKEN_MULT expr
   27     | TOKEN_PAREN_L expr TOKEN_PAREN_R
   28     | expr TOKEN_AND expr
   29     | expr TOKEN_OR expr


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_VOID (258) 2
    TOKEN_RETURN (259) 18
    TOKEN_ASSIGN (260) 13 17
    TOKEN_EQUALS (261)
    TOKEN_CONST (262) 14
    TOKEN_PUNTO_Y_COMA (263) 12 13 17 18
    TOKEN_ID <sval> (264) 1 12 13 17 21
    TOKEN_NUM <ival> (265) 20
    TOKEN_VAL_BOOL <ival> (266) 22
    TOKEN_BOOL (267) 16
    TOKEN_INT (268) 15
    TOKEN_MAS (269) 23
    TOKEN_MENOS (270) 24
    TOKEN_MULT (271) 26
    TOKEN_DIV (272) 25
    TOKEN_OR (273) 29
    TOKEN_AND (274) 28
    TOKEN_PAREN_L (275) 1 27
    TOKEN_PAREN_R (276) 1 27
    TOKEN_LLAVE_L (277) 1
    TOKEN_LLAVE_R (278) 1


Nonterminals, with rules where they appear

    $accept (24)
        on left: 0
    prog (25)
        on left: 1
        on right: 0
    return_type <nd> (26)
        on left: 2 3
        on right: 1
    body <nd> (27)
        on left: 4
        on right: 1
    sentencias <nd> (28)
        on left: 5 6
        on right: 4 6
    sentencia <nd> (29)
        on left: 7 8 9
        on right: 6
    decl <nd> (30)
        on left: 10 11
        on right: 7
    var <nd> (31)
        on left: 12 13
        on right: 10
    cts <nd> (32)
        on left: 14
        on right: 11
    type <vtype> (33)
        on left: 15 16
        on right: 3 12 13 14
    asign <nd> (34)
        on left: 17
        on right: 8 14
    ret <nd> (35)
        on left: 18
        on right: 9
    value <nd> (36)
        on left: 19
        on right: 13 17 18
    expr <nd> (37)
        on left: 20 21 22 23 24 25 26 27 28 29
        on right: 19 23 24 25 26 27 28 29


State 0

    0 $accept: • prog $end

    TOKEN_VOID  shift, and go to state 1
    TOKEN_BOOL  shift, and go to state 2
    TOKEN_INT   shift, and go to state 3

    prog         go to state 4
    return_type  go to state 5
    type         go to state 6


State 1

    2 return_type: TOKEN_VOID •

    $default  reduce using rule 2 (return_type)


State 2

   16 type: TOKEN_BOOL •

    $default  reduce using rule 16 (type)


State 3

   15 type: TOKEN_INT •

    $default  reduce using rule 15 (type)


State 4

    0 $accept: prog • $end

    $end  shift, and go to state 7


State 5

    1 prog: return_type • TOKEN_ID TOKEN_PAREN_L TOKEN_PAREN_R TOKEN_LLAVE_L body TOKEN_LLAVE_R

    TOKEN_ID  shift, and go to state 8


State 6

    3 return_type: type •

    $default  reduce using rule 3 (return_type)


State 7

    0 $accept: prog $end •

    $default  accept


State 8

    1 prog: return_type TOKEN_ID • TOKEN_PAREN_L TOKEN_PAREN_R TOKEN_LLAVE_L body TOKEN_LLAVE_R

    TOKEN_PAREN_L  shift, and go to state 9


State 9

    1 prog: return_type TOKEN_ID TOKEN_PAREN_L • TOKEN_PAREN_R TOKEN_LLAVE_L body TOKEN_LLAVE_R

    TOKEN_PAREN_R  shift, and go to state 10


State 10

    1 prog: return_type TOKEN_ID TOKEN_PAREN_L TOKEN_PAREN_R • TOKEN_LLAVE_L body TOKEN_LLAVE_R

    TOKEN_LLAVE_L  shift, and go to state 11


State 11

    1 prog: return_type TOKEN_ID TOKEN_PAREN_L TOKEN_PAREN_R TOKEN_LLAVE_L • body TOKEN_LLAVE_R

    TOKEN_RETURN  shift, and go to state 12
    TOKEN_CONST   shift, and go to state 13
    TOKEN_ID      shift, and go to state 14
    TOKEN_BOOL    shift, and go to state 2
    TOKEN_INT     shift, and go to state 3

    $default  reduce using rule 5 (sentencias)

    body        go to state 15
    sentencias  go to state 16
    sentencia   go to state 17
    decl        go to state 18
    var         go to state 19
    cts         go to state 20
    type        go to state 21
    asign       go to state 22
    ret         go to state 23


State 12

   18 ret: TOKEN_RETURN • value TOKEN_PUNTO_Y_COMA

    TOKEN_ID        shift, and go to state 24
    TOKEN_NUM       shift, and go to state 25
    TOKEN_VAL_BOOL  shift, and go to state 26
    TOKEN_PAREN_L   shift, and go to state 27

    value  go to state 28
    expr   go to state 29


State 13

   14 cts: TOKEN_CONST • type asign

    TOKEN_BOOL  shift, and go to state 2
    TOKEN_INT   shift, and go to state 3

    type  go to state 30


State 14

   17 asign: TOKEN_ID • TOKEN_ASSIGN value TOKEN_PUNTO_Y_COMA

    TOKEN_ASSIGN  shift, and go to state 31


State 15

    1 prog: return_type TOKEN_ID TOKEN_PAREN_L TOKEN_PAREN_R TOKEN_LLAVE_L body • TOKEN_LLAVE_R

    TOKEN_LLAVE_R  shift, and go to state 32


State 16

    4 body: sentencias •

    $default  reduce using rule 4 (body)


State 17

    6 sentencias: sentencia • sentencias

    TOKEN_RETURN  shift, and go to state 12
    TOKEN_CONST   shift, and go to state 13
    TOKEN_ID      shift, and go to state 14
    TOKEN_BOOL    shift, and go to state 2
    TOKEN_INT     shift, and go to state 3

    $default  reduce using rule 5 (sentencias)

    sentencias  go to state 33
    sentencia   go to state 17
    decl        go to state 18
    var         go to state 19
    cts         go to state 20
    type        go to state 21
    asign       go to state 22
    ret         go to state 23


State 18

    7 sentencia: decl •

    $default  reduce using rule 7 (sentencia)


State 19

   10 decl: var •

    $default  reduce using rule 10 (decl)


State 20

   11 decl: cts •

    $default  reduce using rule 11 (decl)


State 21

   12 var: type • TOKEN_ID TOKEN_PUNTO_Y_COMA
   13    | type • TOKEN_ID TOKEN_ASSIGN value TOKEN_PUNTO_Y_COMA

    TOKEN_ID  shift, and go to state 34


State 22

    8 sentencia: asign •

    $default  reduce using rule 8 (sentencia)


State 23

    9 sentencia: ret •

    $default  reduce using rule 9 (sentencia)


State 24

   21 expr: TOKEN_ID •

    $default  reduce using rule 21 (expr)


State 25

   20 expr: TOKEN_NUM •

    $default  reduce using rule 20 (expr)


State 26

   22 expr: TOKEN_VAL_BOOL •

    $default  reduce using rule 22 (expr)


State 27

   27 expr: TOKEN_PAREN_L • expr TOKEN_PAREN_R

    TOKEN_ID        shift, and go to state 24
    TOKEN_NUM       shift, and go to state 25
    TOKEN_VAL_BOOL  shift, and go to state 26
    TOKEN_PAREN_L   shift, and go to state 27

    expr  go to state 35


State 28

   18 ret: TOKEN_RETURN value • TOKEN_PUNTO_Y_COMA

    TOKEN_PUNTO_Y_COMA  shift, and go to state 36


State 29

   19 value: expr •
   23 expr: expr • TOKEN_MAS expr
   24     | expr • TOKEN_MENOS expr
   25     | expr • TOKEN_DIV expr
   26     | expr • TOKEN_MULT expr
   28     | expr • TOKEN_AND expr
   29     | expr • TOKEN_OR expr

    TOKEN_MAS    shift, and go to state 37
    TOKEN_MENOS  shift, and go to state 38
    TOKEN_MULT   shift, and go to state 39
    TOKEN_DIV    shift, and go to state 40
    TOKEN_OR     shift, and go to state 41
    TOKEN_AND    shift, and go to state 42

    $default  reduce using rule 19 (value)


State 30

   14 cts: TOKEN_CONST type • asign

    TOKEN_ID  shift, and go to state 14

    asign  go to state 43


State 31

   17 asign: TOKEN_ID TOKEN_ASSIGN • value TOKEN_PUNTO_Y_COMA

    TOKEN_ID        shift, and go to state 24
    TOKEN_NUM       shift, and go to state 25
    TOKEN_VAL_BOOL  shift, and go to state 26
    TOKEN_PAREN_L   shift, and go to state 27

    value  go to state 44
    expr   go to state 29


State 32

    1 prog: return_type TOKEN_ID TOKEN_PAREN_L TOKEN_PAREN_R TOKEN_LLAVE_L body TOKEN_LLAVE_R •

    $default  reduce using rule 1 (prog)


State 33

    6 sentencias: sentencia sentencias •

    $default  reduce using rule 6 (sentencias)


State 34

   12 var: type TOKEN_ID • TOKEN_PUNTO_Y_COMA
   13    | type TOKEN_ID • TOKEN_ASSIGN value TOKEN_PUNTO_Y_COMA

    TOKEN_ASSIGN        shift, and go to state 45
    TOKEN_PUNTO_Y_COMA  shift, and go to state 46


State 35

   23 expr: expr • TOKEN_MAS expr
   24     | expr • TOKEN_MENOS expr
   25     | expr • TOKEN_DIV expr
   26     | expr • TOKEN_MULT expr
   27     | TOKEN_PAREN_L expr • TOKEN_PAREN_R
   28     | expr • TOKEN_AND expr
   29     | expr • TOKEN_OR expr

    TOKEN_MAS      shift, and go to state 37
    TOKEN_MENOS    shift, and go to state 38
    TOKEN_MULT     shift, and go to state 39
    TOKEN_DIV      shift, and go to state 40
    TOKEN_OR       shift, and go to state 41
    TOKEN_AND      shift, and go to state 42
    TOKEN_PAREN_R  shift, and go to state 47


State 36

   18 ret: TOKEN_RETURN value TOKEN_PUNTO_Y_COMA •

    $default  reduce using rule 18 (ret)


State 37

   23 expr: expr TOKEN_MAS • expr

    TOKEN_ID        shift, and go to state 24
    TOKEN_NUM       shift, and go to state 25
    TOKEN_VAL_BOOL  shift, and go to state 26
    TOKEN_PAREN_L   shift, and go to state 27

    expr  go to state 48


State 38

   24 expr: expr TOKEN_MENOS • expr

    TOKEN_ID        shift, and go to state 24
    TOKEN_NUM       shift, and go to state 25
    TOKEN_VAL_BOOL  shift, and go to state 26
    TOKEN_PAREN_L   shift, and go to state 27

    expr  go to state 49


State 39

   26 expr: expr TOKEN_MULT • expr

    TOKEN_ID        shift, and go to state 24
    TOKEN_NUM       shift, and go to state 25
    TOKEN_VAL_BOOL  shift, and go to state 26
    TOKEN_PAREN_L   shift, and go to state 27

    expr  go to state 50


State 40

   25 expr: expr TOKEN_DIV • expr

    TOKEN_ID        shift, and go to state 24
    TOKEN_NUM       shift, and go to state 25
    TOKEN_VAL_BOOL  shift, and go to state 26
    TOKEN_PAREN_L   shift, and go to state 27

    expr  go to state 51


State 41

   29 expr: expr TOKEN_OR • expr

    TOKEN_ID        shift, and go to state 24
    TOKEN_NUM       shift, and go to state 25
    TOKEN_VAL_BOOL  shift, and go to state 26
    TOKEN_PAREN_L   shift, and go to state 27

    expr  go to state 52


State 42

   28 expr: expr TOKEN_AND • expr

    TOKEN_ID        shift, and go to state 24
    TOKEN_NUM       shift, and go to state 25
    TOKEN_VAL_BOOL  shift, and go to state 26
    TOKEN_PAREN_L   shift, and go to state 27

    expr  go to state 53


State 43

   14 cts: TOKEN_CONST type asign •

    $default  reduce using rule 14 (cts)


State 44

   17 asign: TOKEN_ID TOKEN_ASSIGN value • TOKEN_PUNTO_Y_COMA

    TOKEN_PUNTO_Y_COMA  shift, and go to state 54


State 45

   13 var: type TOKEN_ID TOKEN_ASSIGN • value TOKEN_PUNTO_Y_COMA

    TOKEN_ID        shift, and go to state 24
    TOKEN_NUM       shift, and go to state 25
    TOKEN_VAL_BOOL  shift, and go to state 26
    TOKEN_PAREN_L   shift, and go to state 27

    value  go to state 55
    expr   go to state 29


State 46

   12 var: type TOKEN_ID TOKEN_PUNTO_Y_COMA •

    $default  reduce using rule 12 (var)


State 47

   27 expr: TOKEN_PAREN_L expr TOKEN_PAREN_R •

    $default  reduce using rule 27 (expr)


State 48

   23 expr: expr • TOKEN_MAS expr
   23     | expr TOKEN_MAS expr •
   24     | expr • TOKEN_MENOS expr
   25     | expr • TOKEN_DIV expr
   26     | expr • TOKEN_MULT expr
   28     | expr • TOKEN_AND expr
   29     | expr • TOKEN_OR expr

    TOKEN_MULT  shift, and go to state 39
    TOKEN_DIV   shift, and go to state 40
    TOKEN_OR    shift, and go to state 41
    TOKEN_AND   shift, and go to state 42

    $default  reduce using rule 23 (expr)


State 49

   23 expr: expr • TOKEN_MAS expr
   24     | expr • TOKEN_MENOS expr
   24     | expr TOKEN_MENOS expr •
   25     | expr • TOKEN_DIV expr
   26     | expr • TOKEN_MULT expr
   28     | expr • TOKEN_AND expr
   29     | expr • TOKEN_OR expr

    TOKEN_MULT  shift, and go to state 39
    TOKEN_DIV   shift, and go to state 40
    TOKEN_OR    shift, and go to state 41
    TOKEN_AND   shift, and go to state 42

    $default  reduce using rule 24 (expr)


State 50

   23 expr: expr • TOKEN_MAS expr
   24     | expr • TOKEN_MENOS expr
   25     | expr • TOKEN_DIV expr
   26     | expr • TOKEN_MULT expr
   26     | expr TOKEN_MULT expr •
   28     | expr • TOKEN_AND expr
   29     | expr • TOKEN_OR expr

    TOKEN_OR   shift, and go to state 41
    TOKEN_AND  shift, and go to state 42

    $default  reduce using rule 26 (expr)


State 51

   23 expr: expr • TOKEN_MAS expr
   24     | expr • TOKEN_MENOS expr
   25     | expr • TOKEN_DIV expr
   25     | expr TOKEN_DIV expr •
   26     | expr • TOKEN_MULT expr
   28     | expr • TOKEN_AND expr
   29     | expr • TOKEN_OR expr

    TOKEN_OR   shift, and go to state 41
    TOKEN_AND  shift, and go to state 42

    $default  reduce using rule 25 (expr)


State 52

   23 expr: expr • TOKEN_MAS expr
   24     | expr • TOKEN_MENOS expr
   25     | expr • TOKEN_DIV expr
   26     | expr • TOKEN_MULT expr
   28     | expr • TOKEN_AND expr
   29     | expr • TOKEN_OR expr
   29     | expr TOKEN_OR expr •

    $default  reduce using rule 29 (expr)


State 53

   23 expr: expr • TOKEN_MAS expr
   24     | expr • TOKEN_MENOS expr
   25     | expr • TOKEN_DIV expr
   26     | expr • TOKEN_MULT expr
   28     | expr • TOKEN_AND expr
   28     | expr TOKEN_AND expr •
   29     | expr • TOKEN_OR expr

    $default  reduce using rule 28 (expr)


State 54

   17 asign: TOKEN_ID TOKEN_ASSIGN value TOKEN_PUNTO_Y_COMA •

    $default  reduce using rule 17 (asign)


State 55

   13 var: type TOKEN_ID TOKEN_ASSIGN value • TOKEN_PUNTO_Y_COMA

    TOKEN_PUNTO_Y_COMA  shift, and go to state 56


State 56

   13 var: type TOKEN_ID TOKEN_ASSIGN value TOKEN_PUNTO_Y_COMA •

    $default  reduce using rule 13 (var)
